<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinViewer">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarviewer"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingtoolbarviewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:title="@string/coin_name_string"
            app:toolbarId="@id/toolbarviewer"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
            app:contentScrim="?attr/colorPrimaryDark">

            <ImageView
                android:id="@+id/app_bar_image_viewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarviewer"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/tv_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol_string"
                    android:padding="12dp"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_coin_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/coin_symbol_string"
                    app:layout_constraintLeft_toRightOf="@id/tv_symbol"
                    android:padding="12dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/year_string"
                    app:layout_constraintTop_toBottomOf="@id/tv_symbol"
                    android:padding="12dp"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_coin_year"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/coin_year_string"
                    app:layout_constraintTop_toBottomOf="@id/tv_coin_symbol"
                    app:layout_constraintLeft_toRightOf="@id/tv_year"
                    android:padding="12dp"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_available"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/available_string"
                    app:layout_constraintTop_toBottomOf="@id/tv_coin_year"
                    android:padding="12dp"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_coin_available"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/coin_available_string"
                    app:layout_constraintTop_toBottomOf="@+id/tv_coin_year"
                    app:layout_constraintLeft_toRightOf="@id/tv_available"
                    android:padding="12dp"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/tv_description_string"
                    app:layout_constraintTop_toBottomOf="@id/tv_available"
                    android:padding="12dp"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_coin_description"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:text="@string/coin_description_string"
                    app:layout_constraintTop_toBottomOf="@id/tv_coin_available"
                    app:layout_constraintLeft_toRightOf="@id/tv_description"
                    android:padding="12dp"
                    android:textSize="16sp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>